force-app/main/default/objects/RequirementInitiative__c/RequirementInitiative__c.object-meta.xml
<CustomObject>
    <description>This object is created specifically for NintexDoc generation. This will hold data to overcome challenges faced with OOTB approach.
The records in this object will be created through flow.</description>
    <label>RequirementInitiative</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>RequirementInitiative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RequirementInitiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>