force-app/main/default/objects/RequirementInitiative__c/fields/Due_Date_Combine__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Combine__c</fullName>
    <label>Due Date Combine</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>