force-app/main/default/objects/RequirementInitiative__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold initiative Id</description>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>RequirementInitiatives</relationshipLabel>
    <relationshipName>RequirementInitiatives</relationshipName>
    <type>Lookup</type>
</CustomField>