force-app/main/default/objects/RequirementInitiative__c/fields/Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Name__c</fullName>
    <label>Requirement Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>