force-app/main/default/objects/RequirementInitiative__c/fields/Status_Combine__c.field-meta.xml
<CustomField>
    <fullName>Status_Combine__c</fullName>
    <label>Status Combine</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>